--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-typescript-styled-components",
+  "name": "my-website",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
