--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
         "dev": "next -p 8082",
         "build": "next build",
         "start": "next start",
-        "typecheck": "tsc"
+        "typecheck": "tsc",
+        "lint-md": "remark ./_posts"
+    },
+    "remarkConfig": {
+        "plugins": [
+            "remark-preset-lint-recommended"
+        ]
     },
     "dependencies": {
         "classnames": "2.2.6",
@@ -14,8 +20,15 @@
         "next": "latest",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
+        "rehype-document": "^5.1.0",
+        "rehype-dom-parse": "^3.0.0",
+        "rehype-highlight": "^4.0.0",
+        "rehype-shiki": "^0.0.9",
+        "rehype-stringify": "^8.0.0",
         "remark": "11.0.2",
         "remark-html": "10.0.0",
+        "remark-preset-lint-recommended": "^4.0.1",
+        "remark-rehype": "^7.0.0",
         "typescript": "^3.9.2"
     },
     "devDependencies": {
