--- a/package.json
+++ b/package.json
@@ -1,44 +1,26 @@
 {
-    "name": "blog-starter-typescript",
+    "name": "aman-mohla-website",
     "version": "1.0.0",
     "scripts": {
         "dev": "next -p 8082",
         "build": "next build",
         "start": "next start",
-        "typecheck": "tsc",
-        "lint-md": "remark ./_posts"
-    },
-    "remarkConfig": {
-        "plugins": [
-            "remark-preset-lint-recommended"
-        ]
+        "typecheck": "tsc"
     },
     "dependencies": {
-        "classnames": "2.2.6",
-        "date-fns": "2.10.0",
-        "gray-matter": "4.0.2",
-        "next": "latest",
-        "react": "^16.13.0",
-        "react-dom": "^16.13.0",
-        "rehype-document": "^5.1.0",
-        "rehype-dom-parse": "^3.0.0",
-        "rehype-highlight": "^4.0.0",
-        "rehype-shiki": "^0.0.9",
-        "rehype-stringify": "^8.0.0",
-        "remark": "11.0.2",
-        "remark-html": "10.0.0",
-        "remark-preset-lint-recommended": "^4.0.1",
-        "remark-rehype": "^7.0.0",
-        "typescript": "^3.9.2"
+        "next": "^9.5.3",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "theme-ui": "^0.3.1",
+        "typescript": "^4.0.2"
     },
     "devDependencies": {
         "@types/classnames": "^2.2.10",
         "@types/jest": "^25.2.2",
-        "@types/node": "^14.0.1",
-        "@types/react": "^16.9.35",
+        "@types/node": "^14.6.4",
+        "@types/react": "^16.9.49",
         "@types/react-dom": "^16.9.8",
-        "postcss-preset-env": "^6.7.0",
-        "prettier": "^2.0.5",
-        "tailwindcss": "^1.4.0"
+        "@types/theme-ui": "^0.3.6",
+        "prettier": "^2.1.1"
     }
 }
