--- a/package.json
+++ b/package.json
@@ -1,21 +1,39 @@
 {
     "name": "aman-mohla-website",
     "version": "1.0.0",
+    "description": "Personal website and blog of Aman Prakash Mohla.",
     "scripts": {
-        "dev": "next -p 8082",
-        "build": "next build",
-        "start": "next start",
-        "typecheck": "tsc"
+        "dev": "NODE_ENV=development next -p 8082",
+        "build": "NODE_ENV=production next build",
+        "build-dev": "NODE_ENV=development next build",
+        "start": "NODE_ENV=production next start",
+        "clean": "rm -rf .next ; npm ci ; NODE_ENV=development npm run dev",
+        "now-build": "next build && next export -o dist",
+        "test": "jest"
     },
+    "keywords": [
+        "next.js",
+        "react.js",
+        "blog",
+        "theme-ui",
+        "typescript"
+    ],
+    "author": "Aman Prakash Mohla",
+    "license": "ISC",
+    "browserslist": [
+        "last 2 version"
+    ],
     "dependencies": {
+        "date-fns": "^2.16.1",
+        "gray-matter": "^4.0.2",
         "next": "^9.5.3",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-markdown": "^4.3.1",
         "theme-ui": "^0.3.1",
         "typescript": "^4.0.2"
     },
     "devDependencies": {
-        "@types/classnames": "^2.2.10",
         "@types/jest": "^25.2.2",
         "@types/node": "^14.6.4",
         "@types/react": "^16.9.49",
