--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "last 2 version"
     ],
     "dependencies": {
+        "@theme-ui/color": "^0.3.1",
+        "@theme-ui/presets": "^0.3.0",
+        "@theme-ui/prism": "^0.3.0",
         "date-fns": "^2.16.1",
         "gray-matter": "^4.0.2",
         "next": "^9.5.3",
