--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
     "description": "Personal website and blog of Aman Prakash Mohla.",
     "scripts": {
         "dev": "NODE_ENV=development next -p 8082",
-        "build": "NODE_ENV=production next build",
         "clean": "rm -rf .next",
+        "lint": "npx eslint ./ --ext .js,.jsx,.ts,.tsx",
+        "lint:fix": "npx eslint ./ --ext .js,.jsx,.ts,.tsx --fix",
+        "format": "prettier -l '**/*.{tsx,ts,js,json}'",
+        "format:fix": "prettier --write '**/*.{tsx,ts,js,json}'",
+        "build": "NODE_ENV=production next build",
         "typecheck": "tsc --noEmit",
-        "test": "jest"
+        "test": "npm run clean && npm run lint:fix && npm run format:fix && npm run typecheck"
     },
     "keywords": [
         "next.js",
@@ -26,6 +30,7 @@
         "date-fns": "^2.16.1",
         "gray-matter": "^4.0.2",
         "next": "^9.5.3",
+        "next-seo": "^4.7.3",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-markdown": "^4.3.1",
@@ -33,11 +38,24 @@
         "typescript": "^4.0.2"
     },
     "devDependencies": {
+        "@babel/core": "^7.11.6",
         "@types/jest": "^25.2.2",
         "@types/node": "^14.6.4",
         "@types/react": "^16.9.49",
         "@types/react-dom": "^16.9.8",
         "@types/theme-ui": "^0.3.6",
+        "@typescript-eslint/eslint-plugin": "^4.2.0",
+        "@typescript-eslint/parser": "^4.2.0",
+        "babel-jest": "^26.3.0",
+        "eslint": "^7.9.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-loader": "^4.0.2",
+        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-jsx-a11y": "^6.3.1",
+        "eslint-plugin-markdown": "^2.0.0-rc.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-react": "^7.21.2",
+        "eslint-plugin-react-hooks": "^4.1.2",
         "prettier": "^2.1.1"
     }
 }
