--- a/package.json
+++ b/package.json
@@ -26,26 +26,28 @@
         "last 2 version"
     ],
     "dependencies": {
-        "@theme-ui/color": "^0.3.1",
-        "@types/chart.js": "^2.9.27",
+        "@chakra-ui/react": "^1.1.0",
+        "@emotion/react": "^11.1.4",
+        "@emotion/styled": "^11.0.0",
         "axios": "^0.21.0",
         "chart.js": "^2.9.4",
         "date-fns": "^2.16.1",
+        "framer-motion": "^3.1.1",
         "gray-matter": "^4.0.2",
-        "next": "^10.0.0",
+        "next": "^10.0.4",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-icons": "^4.1.0",
         "react-markdown": "^4.3.1",
-        "theme-ui": "^0.3.1",
-        "typescript": "^4.0.5"
+        "typescript": "^4.1.3"
     },
     "devDependencies": {
         "@babel/core": "^7.12.3",
+        "@types/chart.js": "^2.9.27",
         "@types/jest": "^25.2.2",
         "@types/node": "^14.14.6",
         "@types/react": "^16.9.55",
         "@types/react-dom": "^16.9.9",
-        "@types/theme-ui": "^0.3.7",
         "@typescript-eslint/eslint-plugin": "^4.6.1",
         "@typescript-eslint/parser": "^4.6.1",
         "babel-jest": "^26.6.2",
