--- a/package.json
+++ b/package.json
@@ -26,20 +26,20 @@
         "last 2 version"
     ],
     "dependencies": {
-        "@chakra-ui/react": "^1.1.0",
-        "@emotion/react": "^11.1.4",
-        "@emotion/styled": "^11.0.0",
-        "axios": "^0.21.0",
+        "@chakra-ui/react": "^1.6.4",
+        "@emotion/react": "^11.4.0",
+        "@emotion/styled": "^11.3.0",
+        "axios": "^0.21.1",
         "chart.js": "^2.9.4",
-        "date-fns": "^2.16.1",
-        "framer-motion": "^3.1.1",
+        "date-fns": "^2.22.1",
+        "framer-motion": "^4.1.17",
         "gray-matter": "^4.0.2",
-        "next": "^10.0.4",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "react-icons": "^4.1.0",
-        "react-markdown": "^4.3.1",
-        "typescript": "^4.1.3"
+        "next": "^11.0.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-icons": "^4.2.0",
+        "react-markdown": "^6.0.2",
+        "typescript": "^4.3.5"
     },
     "devDependencies": {
         "@babel/core": "^7.12.3",
@@ -56,7 +56,7 @@
         "eslint-loader": "^4.0.2",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-markdown": "^2.0.0-rc.0",
+        "eslint-plugin-markdown": "^2.2.0",
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-react": "^7.21.5",
         "eslint-plugin-react-hooks": "^4.2.0",
