--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "@typescript-eslint/parser": "^4.6.1",
         "babel-jest": "^26.6.2",
         "eslint": "^7.12.1",
+        "eslint-config-next": "^11.0.1",
         "eslint-config-prettier": "^6.15.0",
         "eslint-loader": "^4.0.2",
         "eslint-plugin-import": "^2.22.1",
